[project]
name = "ctakes_examples"
requires-python = ">= 3.6"
authors = [
  { name="Andy McMurry, PhD", email="andrew.mcmurry@childrens.harvard.edu" },
  { name="Michael Terry", email="michael.terry@childrens.harvard.edu" },
]
description = "Example physician notes for natural language processing"
readme = "README.rst"
license = { text="Apache License 2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/Machine-Learning-for-Medical-Language/ctakes-examples"

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = [
    "test/",
    "LICENSE",
]

[project.optional-dependencies]
tests = [
]
